# Topological-Watershed

./: .gitignore
Proyecto/: Watershed Topologico Concurrente.pptx  Watershed Topológico Concurrente-Final.pptx
Proyecto/Tesis/: Thesis.cls  Thesis.tex
Proyecto/Tesis/Chapters/: Chapter4.tex
Proyecto/Tesis/Settings/: Packages.tex
Proyecto/borradores/: Component Tree.txt  Watershed Topologico Lineal - Final.txt  Watershed Topologico Lineal.txt
SourceCode/: CMakeLists.txt  Readme.txt  measure
SourceCode/BidimiensionalArrayPartitioner/: BidimiensionalArrayPartitioner.cpp  BidimiensionalArrayPartitioner.h  CMakeLists.txt
SourceCode/BidimiensionalArrayPartitioner/UnitTest/: BidimiensionalArrayPartitionerTest.cpp  CMakeLists.txt
SourceCode/Binaries/: topologicalWatershed
SourceCode/ComponentTree/: CMakeLists.txt  ComponentTree.cpp  ComponentTree.h  LCASolver.cpp  LCASolver.h  Node.h
SourceCode/ComponentTree/UnitTest/: CMakeLists.txt  ComponentTreeUnitTest.cpp
SourceCode/DisjointSetCollection/: CMakeLists.txt  DisjointSetCollection.cpp  DisjointSetCollection.h
SourceCode/DisjointSetCollection/UnitTest/: CMakeLists.txt  DisjointSetCollectionTest.cpp
SourceCode/ImageHandler/: CMakeLists.txt  Image.cpp  Image.h  ImageEightNeighborType.cpp  ImageEightNeighborType.h  ImageFourNeighborType.cpp  ImageFourNeighborType.h  ImageReader.cpp  ImageReader.h  euclideanDistance.cpp  generateRandomImage.cpp  toGreyScale.cpp
SourceCode/ImageHandler/UnitTest/: CMakeLists.txt  ImageUnitTests.cpp
SourceCode/TopologicalWatershed/: CMakeLists.txt  LinearTopologicalWatershed.cpp  LinearTopologicalWatershed.h  TopologicalWatershed.cpp  TopologicalWatershed.h  WDestructibleElement.h  WDestructibleElementsCollection.cpp  WDestructibleElementsCollection.h  doLinearTopologicalWatershed.cpp  doNaiveTopologicalWatershed.cpp  doParallelTopologicalWatershed.cpp  main.cpp  main_wcrest.cpp
SourceCode/TopologicalWatershed/UnitTest/: CMakeLists.txt  LinealTopologicalWatershedUnitTests.cpp  TopologicalWatershedUnitTests.cpp
imagenesAleatorias/: measure_result.txt  measure_result_random_8000x8000.txt
imagenesReales/: measure_result.txt
