add_library(TopologicalWatershed TopologicalWatershed.cpp WDestructibleElementsCollection.cpp)
target_link_libraries(TopologicalWatershed ImageNeighborRelation ComponentTree
ImageReader BidimiensionalArrayPartitioner)

add_executable(doNaiveTopologicalWatershed doNaiveTopologicalWatershed.cpp)
target_link_libraries(doNaiveTopologicalWatershed TopologicalWatershed)

add_executable(doLinearTopologicalWatershed doLinearTopologicalWatershed.cpp)
target_link_libraries(doLinearTopologicalWatershed TopologicalWatershed)

add_executable(doParallelTopologicalWatershed doParallelTopologicalWatershed.cpp)
target_link_libraries(doParallelTopologicalWatershed TopologicalWatershed)

add_executable(topologicalWatershed main.cpp)
target_link_libraries(topologicalWatershed TopologicalWatershed)
