add_library(TopologicalWatershed TopologicalWatershed.cpp WDestructibleElementsCollection.cpp)
target_link_libraries(TopologicalWatershed ImageNeighborRelation ComponentTree
ImageReader BidimiensionalArrayPartitioner)

add_executable(naiveTopologicalWatershed doNaiveTopologicalWatershed.cpp)
target_link_libraries(naiveTopologicalWatershed TopologicalWatershed)

add_executable(topologicalWatershed main.cpp)
target_link_libraries(topologicalWatershed TopologicalWatershed)
